# code-samples

./: .disclaimer  .gitignore  LICENSE  NOTICE  readme.md
blueprints/: basic_linux_vm.json  create_lcm_darksite_web_server.json  scaling_demo_october_2019.json
blueprints/centos8_docker_flask/: .disclaimer  README.md  centos8_docker_flask.json
csharp/: README.md  readme.rst
csharp/list_vm_v3/: list_vm_v3.cs  readme.rst
docs/: index.md
endpoints/: prism_central_iam.json  prism_central_vmm.json  prism_central_vmm_auth.json
go/: README.md  readme.rst
postman/: Nutanix REST API Testing.postman_collection.json  nutanix_api_v3_runbooks_endpoints.json
powershell/: readme.rst
python/: README.md  readme.rst
python/v4api_client/: README.md  list_images.py  list_images_client.py  pyproject.toml  requirements.txt  update_image_etag.py  update_image_etag_client.py
python/v4api_sdk/: .gitignore  README.md  api_key_auth.py  api_key_auth_sdk.py  batch_ops_actions.py  batch_ops_create.py  batch_ops_modify.py  category_specs.json  create_categories.py  create_image.py  create_image_sdk.py  create_network_security_policy.py  create_subnet.py  create_subnet_sdk.py  create_vm.py  create_vm_sdk.py  deploy_vm_from_template.py  full_etag.py  generate_report.py  generate_report_config.py  get_vm_stats.py  get_vm_stats_sdk.py  lcm_updates.py  list_images.py  list_images_sdk.py  objects_storage.py  pyproject.toml  register_pc_to_nc.json  register_pc_to_nc.py  requirements.txt  startup-example.json  startup.json.example  startup.py  subnet_config.json  update_image_etag.py  update_image_etag_sdk.py  userdata.yaml  userdata_simple.yaml
python/v4api_sdk/categories/: Categories V4 Workflow Documentation.postman_collection.json  LICENSE  NOTICES  README.md  categories_v4_workflow.py  requirements.txt
python/v4api_sdk/dr/: LICENSE  NOTICES  README.md  cbt_api_code.py  requirements.txt  vss_api_code.py
python/v4api_sdk/tme/: README.md  __init__.py  apiclient.py  pyproject.toml  test.py  test_config.py  test_utils.py  utils.py
python/v4api_sdk/tme/src/tme/: apiclient.py  utils.py
runbooks/: demo-runbook.json
shell/: README.md  readme.rst
(+93 files in other folders)
