[project]
name = "nutanix-sdk-samples-private"
version = "2.0"
description = "A collection of task-based code samples, scripts and mini applications focused on demonstrating specific Nutanix v4 Python SDK features."
readme = "README.md"
authors = [
    { name = "Chris Rasmussen", email = "christo.rasmuss@nutanix.com" }
]
requires-python = ">=3.9"
dependencies = [
    "ntnx-aiops-py-client==4.2.1b1",
    "ntnx-clustermgmt-py-client==4.2.1",
    "ntnx-iam-py-client==4.1.1b2",
    "ntnx-lifecycle-py-client==4.2.1",
    "ntnx-microseg-py-client==4.2.1",
    "ntnx-networking-py-client==4.2.1",
    "ntnx-opsmgmt-py-client==4.0.3",
    "ntnx-prism-py-client==4.2.1",
    "ntnx-vmm-py-client==4.2.1",
    "requests>=2.32.4",
    "rich>=14.3.2",
    "termcolor>=3.1.0",
    "tme",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "flake8>=7.3.0",
    "pylint>=3.3.9",
    "ruff>=0.15.0",
]

[tool.uv.workspace]
members = [
    "tme",
]

[tool.uv.sources]
tme = { workspace = true }
